make new api and fix sume old code